tests/snapshots/tui_squash_select__fixup_footer_renders.snap
---
source: tests/tui_squash_select.rs
expression: "harness.render(|frame| { views::commit_list::render(&mut app, frame); })"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "SHA        Title                                                                ",
        "11111111   Oldest commit on branch                                              ",
        "22222222   Middle commit                                                        ",
        "33333333   Newest commit (HEAD)                                                 ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        " Fixup 33333333 "Newest commit (HEAD)" into… · Enter confirm · Esc cancel       ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Rgb(0, 40, 50), underline: Reset, modifier: REVERSED,
        x: 8, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Reset, bg: Rgb(0, 40, 50), underline: Reset, modifier: REVERSED,
        x: 34, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: White, bg: Rgb(0, 120, 120), underline: Reset, modifier: NONE,
        x: 8, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 3, fg: White, bg: Rgb(0, 120, 120), underline: Reset, modifier: NONE,
        x: 31, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: White, bg: Cyan, underline: Reset, modifier: NONE,
        x: 7, y: 23, fg: Gray, bg: Cyan, underline: Reset, modifier: NONE,
        x: 15, y: 23, fg: White, bg: Cyan, underline: Reset, modifier: NONE,
        x: 47, y: 23, fg: Gray, bg: Cyan, underline: Reset, modifier: NONE,
        x: 52, y: 23, fg: White, bg: Cyan, underline: Reset, modifier: NONE,
        x: 63, y: 23, fg: Gray, bg: Cyan, underline: Reset, modifier: NONE,
        x: 66, y: 23, fg: White, bg: Cyan, underline: Reset, modifier: NONE,
    ]
}
