tests/snapshots/tui_squash_select__squash_candidate_coloring_with_fragmap.snap
---
source: tests/tui_squash_select.rs
expression: buffer
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 10 },
    content: [
        "SHA        Title                                                       │Hunk gro",
        "aaaa1111   Add config file                                             │█       ",
        "bbbb3333   Unrelated change                                            ││█      ",
        "cccc5555   Fix config typo                                             │█       ",
        "                                                                       │        ",
        "                                                                       │        ",
        "                                                                       │        ",
        "                                                                       │        ",
        "                                                                       │        ",
        " Squash cccc5555 "Fix config typo" into… · Enter confirm · Esc cancel           ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 71, y: 0, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Yellow, bg: Rgb(0, 40, 50), underline: Reset, modifier: REVERSED,
        x: 8, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Yellow, bg: Rgb(0, 40, 50), underline: Reset, modifier: REVERSED,
        x: 26, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 1, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 1, fg: White, bg: Rgb(60, 60, 80), underline: Reset, modifier: NONE,
        x: 73, y: 1, fg: Reset, bg: Rgb(60, 60, 80), underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 2, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 2, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 73, y: 2, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 74, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: White, bg: Rgb(0, 120, 120), underline: Reset, modifier: NONE,
        x: 8, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 3, fg: White, bg: Rgb(0, 120, 120), underline: Reset, modifier: NONE,
        x: 26, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 3, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 3, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 73, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 4, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 5, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 6, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 7, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 8, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: White, bg: Cyan, underline: Reset, modifier: NONE,
        x: 8, y: 9, fg: Gray, bg: Cyan, underline: Reset, modifier: NONE,
        x: 16, y: 9, fg: White, bg: Cyan, underline: Reset, modifier: NONE,
        x: 43, y: 9, fg: Gray, bg: Cyan, underline: Reset, modifier: NONE,
        x: 48, y: 9, fg: White, bg: Cyan, underline: Reset, modifier: NONE,
        x: 59, y: 9, fg: Gray, bg: Cyan, underline: Reset, modifier: NONE,
        x: 62, y: 9, fg: White, bg: Cyan, underline: Reset, modifier: NONE,
    ]
}
