tests/snapshots/tui_squash_select__squash_dialog_renders.snap
---
source: tests/tui_squash_select.rs
assertion_line: 53
expression: buffer
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "SHA        Title                                                                ",
        "aaa111bb   Oldest commit on branch                                              ",
        "ccc333dd   Middle commit                                                        ",
        "eee555ff   Newest commit (HEAD)                                                 ",
        "                                                                                ",
        "                                                                                ",
        "          ┌ Squash Commit ───────────────────────────────────────────┐          ",
        "          │                                                          │          ",
        "          │ Squash this commit into…                                 │          ",
        "          │                                                          │          ",
        "          │ eee555fff6                                               │          ",
        "          │ Newest commit (HEAD)                                     │          ",
        "          │                                                          │          ",
        "          │ Navigate to a target commit and press Enter.             │          ",
        "          │                                                          │          ",
        "          │                Enter Confirm   Esc Cancel                │          ",
        "          │                                                          │          ",
        "          └──────────────────────────────────────────────────────────┘          ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        " eee555fff666 1/3                                                               ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 8, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 31, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 6, fg: Magenta, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 7, fg: Magenta, bg: Black, underline: Reset, modifier: NONE,
        x: 11, y: 7, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 69, y: 7, fg: Magenta, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 8, fg: Magenta, bg: Black, underline: Reset, modifier: NONE,
        x: 11, y: 8, fg: Yellow, bg: Black, underline: Reset, modifier: BOLD,
        x: 36, y: 8, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 69, y: 8, fg: Magenta, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 9, fg: Magenta, bg: Black, underline: Reset, modifier: NONE,
        x: 11, y: 9, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 69, y: 9, fg: Magenta, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 10, fg: Magenta, bg: Black, underline: Reset, modifier: NONE,
        x: 11, y: 10, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 22, y: 10, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 69, y: 10, fg: Magenta, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 11, fg: Magenta, bg: Black, underline: Reset, modifier: NONE,
        x: 11, y: 11, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 69, y: 11, fg: Magenta, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 12, fg: Magenta, bg: Black, underline: Reset, modifier: NONE,
        x: 11, y: 12, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 69, y: 12, fg: Magenta, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 13, fg: Magenta, bg: Black, underline: Reset, modifier: NONE,
        x: 11, y: 13, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 56, y: 13, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 69, y: 13, fg: Magenta, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 14, fg: Magenta, bg: Black, underline: Reset, modifier: NONE,
        x: 11, y: 14, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 69, y: 14, fg: Magenta, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 15, fg: Magenta, bg: Black, underline: Reset, modifier: NONE,
        x: 11, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 15, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 33, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 43, y: 15, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 47, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 69, y: 15, fg: Magenta, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 16, fg: Magenta, bg: Black, underline: Reset, modifier: NONE,
        x: 11, y: 16, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 69, y: 16, fg: Magenta, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 17, fg: Magenta, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: White, bg: Blue, underline: Reset, modifier: NONE,
    ]
}
