tests/snapshots/tui_squash_select__squash_dims_later_commits.snap
---
source: tests/tui_squash_select.rs
expression: "harness.render(|frame| views::commit_list::render(&mut app, frame))"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 10 },
    content: [
        "SHA        Title                                                                ",
        "11111111   Oldest commit on branch                                              ",
        "22222222   Middle commit                                                        ",
        "33333333   Newest commit (HEAD)                                                 ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        " Squash 22222222 "Middle commit" into… · Enter confirm · Esc cancel             ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Rgb(0, 40, 50), underline: Reset, modifier: REVERSED,
        x: 8, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Reset, bg: Rgb(0, 40, 50), underline: Reset, modifier: REVERSED,
        x: 34, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: White, bg: Rgb(0, 120, 120), underline: Reset, modifier: NONE,
        x: 8, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 2, fg: White, bg: Rgb(0, 120, 120), underline: Reset, modifier: NONE,
        x: 24, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 3, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: White, bg: Cyan, underline: Reset, modifier: NONE,
        x: 8, y: 9, fg: Gray, bg: Cyan, underline: Reset, modifier: NONE,
        x: 16, y: 9, fg: White, bg: Cyan, underline: Reset, modifier: NONE,
        x: 41, y: 9, fg: Gray, bg: Cyan, underline: Reset, modifier: NONE,
        x: 46, y: 9, fg: White, bg: Cyan, underline: Reset, modifier: NONE,
        x: 57, y: 9, fg: Gray, bg: Cyan, underline: Reset, modifier: NONE,
        x: 60, y: 9, fg: White, bg: Cyan, underline: Reset, modifier: NONE,
    ]
}
