tests/snapshots/tui_squash_select__squash_footer_renders.snap
---
source: tests/tui_squash_select.rs
expression: "harness.render(|frame| { views::commit_list::render(&mut app, frame); })"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "SHA        Title                                                                ",
        "11111111   Oldest commit on branch                                              ",
        "22222222   Middle commit                                                        ",
        "33333333   Newest commit (HEAD)                                                 ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        " Squash 33333333 "Newest commit (HEAD)" into… · Enter confirm · Esc cancel      ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: White, bg: Rgb(0, 120, 120), underline: Reset, modifier: NONE,
        x: 8, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 3, fg: White, bg: Rgb(0, 120, 120), underline: Reset, modifier: NONE,
        x: 31, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: White, bg: Cyan, underline: Reset, modifier: NONE,
        x: 8, y: 23, fg: Gray, bg: Cyan, underline: Reset, modifier: NONE,
        x: 16, y: 23, fg: White, bg: Cyan, underline: Reset, modifier: NONE,
        x: 48, y: 23, fg: Gray, bg: Cyan, underline: Reset, modifier: NONE,
        x: 53, y: 23, fg: White, bg: Cyan, underline: Reset, modifier: NONE,
        x: 64, y: 23, fg: Gray, bg: Cyan, underline: Reset, modifier: NONE,
        x: 67, y: 23, fg: White, bg: Cyan, underline: Reset, modifier: NONE,
    ]
}
