tests/snapshots/tui_squash_select__squash_from_a_worktree_row_dims_the_other_row.snap
---
source: tests/tui_squash_select.rs
assertion_line: 530
expression: "harness.render(|frame| views::commit_list::render(&mut app, frame))"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 10 },
    content: [
        "SHA        Title                                                                ",
        "aaa111bb   Real commit                                                          ",
        "staged     staged                                                               ",
        "unstaged   unstaged                                                             ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        " Squash unstaged "unstaged" into… · Enter confirm · Esc cancel                  ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Rgb(0, 40, 50), underline: Reset, modifier: REVERSED,
        x: 8, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Reset, bg: Rgb(0, 40, 50), underline: Reset, modifier: REVERSED,
        x: 22, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: White, bg: Rgb(0, 120, 120), underline: Reset, modifier: NONE,
        x: 8, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 3, fg: White, bg: Rgb(0, 120, 120), underline: Reset, modifier: NONE,
        x: 19, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: White, bg: Cyan, underline: Reset, modifier: NONE,
        x: 8, y: 9, fg: Gray, bg: Cyan, underline: Reset, modifier: NONE,
        x: 16, y: 9, fg: White, bg: Cyan, underline: Reset, modifier: NONE,
        x: 36, y: 9, fg: Gray, bg: Cyan, underline: Reset, modifier: NONE,
        x: 41, y: 9, fg: White, bg: Cyan, underline: Reset, modifier: NONE,
        x: 52, y: 9, fg: Gray, bg: Cyan, underline: Reset, modifier: NONE,
        x: 55, y: 9, fg: White, bg: Cyan, underline: Reset, modifier: NONE,
    ]
}
